# Interprocess-Communication

./: CMakeLists.txt  INFORME.md  README.md
include/: server_structures.h
src/: client1.c  client2.c  client3.c  server.c
